Add source for bot, add catalog