@@ -1,11 +1,14 @@
 package io.aiven.flink.connectors.slack.source;
 
+import static io.aiven.flink.connectors.slack.Constants.APP_TOKEN;
+import static io.aiven.flink.connectors.slack.Constants.BOT_TOKEN;
+import static io.aiven.flink.connectors.slack.Constants.CHANNEL_ID;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.flink.configuration.ConfigOption;
-import org.apache.flink.configuration.ConfigOptions;
 import org.apache.flink.table.catalog.Column;
 import org.apache.flink.table.connector.source.DynamicTableSource;
 import org.apache.flink.table.factories.DynamicTableSourceFactory;
@@ -13,12 +16,8 @@ import org.apache.flink.table.factories.FactoryUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class FlinkSlackConnectorTableSourceFactory implements DynamicTableSourceFactory {
-  private static final Logger LOG =
-      LoggerFactory.getLogger(FlinkSlackConnectorTableSourceFactory.class);
-
-  public static final ConfigOption<String> APP_TOKEN =
-      ConfigOptions.key("apptoken").stringType().noDefaultValue();
+public class SlackTableSourceFactory implements DynamicTableSourceFactory {
+  private static final Logger LOG = LoggerFactory.getLogger(SlackTableSourceFactory.class);
 
   @Override
   public DynamicTableSource createDynamicTableSource(Context context) {
@@ -32,7 +31,11 @@ public class FlinkSlackConnectorTableSourceFactory implements DynamicTableSource
             .filter(Column::isPhysical)
             .map(Column::getName)
             .collect(Collectors.toList());
-    return new FlinkSlackConnectorTableSource(helper.getOptions().get(APP_TOKEN), columnNames);
+    return new SlackTableSource(
+        helper.getOptions().get(APP_TOKEN),
+        helper.getOptions().get(BOT_TOKEN),
+        helper.getOptions().get(CHANNEL_ID),
+        context.getCatalogTable().getResolvedSchema());
   }
 
   @Override
@@ -42,11 +45,11 @@ public class FlinkSlackConnectorTableSourceFactory implements DynamicTableSource
 
   @Override
   public Set<ConfigOption<?>> requiredOptions() {
-    return Collections.singleton(APP_TOKEN);
+    return Collections.singleton(BOT_TOKEN);
   }
 
   @Override
   public Set<ConfigOption<?>> optionalOptions() {
-    return Collections.emptySet();
+    return Set.of(APP_TOKEN, CHANNEL_ID);
   }
 }
